fixed readability of header and footer

--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 html {
     height: 100%;
 }
+
 body {
     width: 100%;
     height: 100px;
@@ -18,48 +19,58 @@ body {
       background-attachment: fixed;
   }
 
+  h1 {
+    border-style: double;
+    background-color: black;
+    background-attachment: auto;
+  }
+
   nav {
       float: left;
       width: 100%;
   }
+
   nav ul {
     padding-left:40%;
     float: left;
-    border-bottom: ;
     list-style-type: none;
   }
+
   nav li {
       float: left;
   }
+
   nav li a {
      display: block;
       height: 25px;
       padding: 12px 18px 8px 18px; 
   }
+
   a {
     display: block;
     height: 25px;
     padding: 12px 18px 8px 18px;
     text-align: center;
   }
+
   article img {
       height: 200px;
       width: 200px;
       float: stretch;
   }
+
   section {
       width:100%;
       float: center;
       padding-left: 400px;
   }
+  
   footer {
-    Width: 100%;
-    background: linear-gradient(White, black);
-    color: black;
-    padding: 40px;
-    border:10px solid black;
-    margin: 50px;
-    font-size: 30px;
-    display: stretch;
+    border: 2px ridge rgb(96, 194, 207);
+    padding: 100px;
+    display: block;
+    text-align: center;
+    background-image: url("pictures/snow-pic.jpg");
+    background-attachment: fixed;
   }
   /* need to find a better organization method */
